--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Product Website</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1>Pandora</h1>
+    <hr class="line">
+    <h2>Princess Tiara Crown Ring</h2>
+    <img src="img/rose-gold.jpg" alt="Ring"> 
+
+
+
 
   </body>
 </html>
