--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>Product Website</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Pandora</h1>
     <hr class="line">
     <h2>Princess Tiara Crown Ring</h2>
-    <img src="img/rose-gold.jpg" alt="Ring"> 
+    <img src="img/rose-gold.jpg" alt="Ring">
 
 
 
