--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    <h1>Pandora</h1>
-    <hr class="line">
-    <h2>Princess Tiara Crown Ring</h2>
-    <img src="img/rose-gold.jpg" alt="Ring">
+    <img src="img/pandora.jpg" alt="Crown" class="center">
+
+    <div class="topbar">
+      <table>
+        <tr>
+          <th>Home</th>
+          <th>Jewellery</th>
+          <th><a href="index2.html" class="active">Princess Ring</a></th>
+      </tr>
+    </table>
+  </div>
+
+
+
 
 
 
