--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Product Website</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sulphur+Point:700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -19,6 +20,17 @@
       </tr>
     </table>
   </div>
+  <div class="row">
+   <div class="column">
+  <img src="img/friends.jpg" alt="crown" class="size">
+   </div>
+   <div class="column">
+  <img src="img/paris.jpg" alt="crown" class="size">
+  </div>
+  <div class="column">
+    <img src="img/store.jpg" alt="crown" class="size">
+ </div>
+
 
 
 
