--- a/index2.html
+++ b/index2.html
@@ -4,13 +4,31 @@
     <meta charset="utf-8">
     <title>Princess Ring</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sulphur+Point:700&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Best Seller</h1>
     <h2>Princess Tiara Crown Ring</h2>
-    <img src="img/rose-gold.jpg" alt="Ring" class="center">
-    <a href="index.html">Homepage</a>
+  <div class="row">
+    <div class="column">
+    <img src="img/rose-gold.jpg" alt="Ring" class="size">
+   </div>
+   <div class="column">
+    <img src="img/hand.jpg" alt="Hand" class="size">
+   </div>
+   <div class="column">
+    <img src="img/box.jpg" alt="Box" class="size">
+   </div>
+ </div>
+
+    <p>Description: Feel like a princess everyday with this exquisite tiara ring.
+      It is crafted in sterling silver and has a style feature of a heart-shaped tiara
+      design with a single shimmering cubic zirconia stone.</p>
+    <p>Price:$60.00</p>
+  <div class="topbar">
+    <h3><a href="index.html">Homepage</a></h3>
+  </div>
 
   </body>
 </html>
