--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div class="topbar">
       <table>
         <tr>
-          <th>Home</th>
-          <th>Jewellery</th>
-          <th><a href="index2.html" class="active">Princess Ring</a></th>
+          <th>About Us</th>
+          <th><a href="index3.html" class="active">Chrams</a></th>
+          <th>Bracelets</th>
+          <th><a href="index2.html" class="active">Rings</a></th>
       </tr>
     </table>
   </div>
