--- a/index2.html
+++ b/index2.html
@@ -8,24 +8,22 @@
     <link href="https://fonts.googleapis.com/css?family=Sulphur+Point:700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Best Seller</h1>
+    <h1>Rings</h1>
+    <h3>Best Seller</h3>
     <h2>Princess Tiara Crown Ring</h2>
-  <div class="row">
-    <div class="column">
-    <img src="img/rose-gold.jpg" alt="Ring" class="size">
-   </div>
-   <div class="column">
-    <img src="img/hand.jpg" alt="Hand" class="size">
-   </div>
-   <div class="column">
-    <img src="img/box.jpg" alt="Box" class="size">
-   </div>
- </div>
 
+    <img src="img/rose-gold.jpg" alt="Ring" class="size">
     <p>Description: Feel like a princess everyday with this exquisite tiara ring.
       It is crafted in sterling silver and has a style feature of a heart-shaped tiara
       design with a single shimmering cubic zirconia stone.</p>
     <p>Price:$60.00</p>
+    <hr class="new1">
+    <h2>Celestial Stars Ring</h2>
+    <img src="img/stars.jpg" alt="Stars" class="size">
+    <p>Description: Go to the moon and back with the stars with this enchanting ring. Shine bright
+      like a star in every special occasion.</p>
+    <P>Price:$45.00</p>
+
   <div class="topbar">
     <h3><a href="index.html">Homepage</a></h3>
   </div>
