--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <tr>
           <th>About Us</th>
           <th><a href="index3.html" class="active">Chrams</a></th>
-          <th>Bracelets</th>
+          <th><a href="index4.html" class="active">Bracelets</a></th>
           <th><a href="index2.html" class="active">Rings</a></th>
       </tr>
     </table>
