--- a/index.html
+++ b/index.html
@@ -14,23 +14,17 @@
     <div class="topbar">
       <table>
         <tr>
-          <th>About Us</th>
-          <th><a href="index3.html" class="active">Chrams</a></th>
+          <th><a href="https://us.pandora.net" class="active">About Us</a></th>
+          <th><a href="index3.html" class="active">Charms</a></th>
           <th><a href="index4.html" class="active">Bracelets</a></th>
           <th><a href="index2.html" class="active">Rings</a></th>
       </tr>
     </table>
-  </div>
-  <div class="row">
-   <div class="column">
-  <img src="img/friends.jpg" alt="crown" class="size">
-   </div>
-   <div class="column">
-  <img src="img/paris.jpg" alt="crown" class="size">
-  </div>
-  <div class="column">
-    <img src="img/store.jpg" alt="crown" class="size">
- </div>
+
+  <img src="img/friends.jpg" alt="crown" class="Lol">
+  <img src="img/paris.jpg" alt="Paris" class="Lol">
+  
+
 
 
 
