--- a/index4.html
+++ b/index4.html
@@ -12,6 +12,7 @@
     <h2>Authentic Pandora Sliver Bracelet With Rose Gold Hearts</h2>
     <img src="img/b.jpg" alt="BB" class="size">
     <p>Description: Feel beautiful everyday</p>
+    <p>Price:$70.00</p>
     <div class="topbar">
       <h3><a href="index.html">Homepage</a></h3>
     </div>
